# bars

./: .gitignore  README.md
barsMQTT/ESP8266/: Makefile
barsMQTT/ESP8266/user/: user_main.c
barsMQTT/bars_esp_mqtt/: Makefile
barsMQTT/bars_esp_mqtt/user/: user_main.c
dev/board/: BOM.xlsx  Connectors.SchLib  Job1.OutJob  Mcus.PcbLib  PCB1.PcbDoc  PCB_Project.PrjPcb  Passive.PcbLib  Passive.SchLib  PcbLib1.PcbLib  Schlib1.SchLib  Sheet1.SchDoc  Sheet2.SchDoc  old.RUL
dev/soft/: firmware.xml
dev/soft/152c6 counter/: board.h  board_pins.h  board_pins_bars.h  counter.dep  counter.ewp  main.c  stm8l15x_it.c
dev/soft/152c6 counter/settings/: counter.Debug.cspy.bat  counter.Debug.cspy.ps1  counter.Debug.general.xcl  counter.dbgdt  (+1 more)
dev/soft/barsMQTT/: CMakeLists.txt
dev/soft/barsMQTT/bars_esp_mqtt/: CMakeLists.txt
dev/soft/barsMQTT/bars_esp_mqtt/include/: user_config.h
dev/soft/bars_stm_test/: asmmain.s  bars_stm_test.dep  bars_stm_test.ewp  bars_stm_test.ewt  board.h  board_pins_bars.h  main.c  stm8l15x_it.c
dev/soft/iar_test/: board.h  board_flash.c  board_flash.h  board_pins_bars.h  first.dep  first.ewp  first.ewt  main.c  stm8l15x_conf.h  stm8l15x_it.c  stm8l15x_it.h  stm8l_discovery_lcd.c  ws.eww
dev/soft/sensor/: board.h  board_pins.h  board_pins_bars.h  main.c  sensor.dep  sensor.drn  sensor.ewp  sensor.ewt  stm8l15x_conf.h  stm8l15x_it.c  tools.c  tools.h
dev/soft/stm8l_tests/: board.h  board_pins.h  main.c  stm8l15x_it.c  tests.c  tests.dep  tests.ewp  tests.ewt  tests.h
docs/stm8l/StdPeriph_Lib/: stm8l15x-16x-05x-al31-l_stdperiph_lib_um.chw
(+46 files in other folders)
